--- a/index.html
+++ b/index.html
@@ -5,24 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <header>
-        <h1> Welcome to Soundslice</h1>
-        <nav>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#convert">Convert</a></li>
-                <li><a href="#output">Output</a></li>
-            </ul>
+    <header class="main-header">
+        <nav class="main-nav-desktop">
+            <a href="#about">About</a>
+            <a href="#convert">Convert</a>
+            <a href="#output">Output</a>
+        </nav>
+        <nav class="main-nav-mobile">
+            hfhgfhfh
         </nav>
     </header>
+        
     <main>
 
-        <section>
-            <h2>About Soundslice</h2>
-            <p>Soundslice is a platform that converts your ASCII into readable sheet music.</p>
+        <section class="hero">
+            <h2 class="hero-title">Convert your ASCII</h2>
+            <p class="hero-text">Soundslice is a platform that converts your ASCII into readable sheet music.</p>
         </section>
 
         <form action="convert" method="POST">
