#6 input in label

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </section>
 
         <form action="convert" method="POST">
-            <label for="ascii">ASCII Input:</label>
+            <label for="ascii" input="text">ASCII Input:</label>
             <textarea name="ascii" rows="10" cols="30" placeholder="Enter ASCII text here..."></textarea>
             <button type="submit">Convert</button>
         </form>
