header rework + font

--- a/index.html
+++ b/index.html
@@ -6,17 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/styleguide.css">
 </head>
 
 <body>
     <header class="main-header">
-        <nav class="main-nav-desktop">
-            <a href="#about">About</a>
-            <a href="#convert">Convert</a>
-            <a href="#output">Output</a>
-        </nav>
         <nav class="main-nav-mobile">
-            hfhgfhfh
+              <ul class="header-first">
+                <div class="header-logo">
+                    <li><img src="assets/svg/square-light-11852e267c30000bf63ef60def1fef5e.svg" width="25px"></li>
+                    <li><p>Soundslice</p></li>
+                </div>
+            </ul>
+
+            <ul class="header-second">
+                <li><img src="assets/svg/hamburger.svg" width="25px"></li>
+            </ul>
+        </nav>
+        <nav class="main-nav-desktop">
+            <ul class="header-first">
+               <div class="header-logo">
+                    <li><img src="assets/svg/square-light-11852e267c30000bf63ef60def1fef5e.svg" width="25px"></li>
+                    <li><p>Soundslice</p></li>
+                </div>
+            </ul>
+
+            <ul class="header-second">
+                <li><a>Log in</a></li>
+                <li><a class="register-but">Sign up</a></li>
+            </ul>
         </nav>
     </header>
         
