--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
               <ul class="header-first">
                 <div class="header-logo">
                     <li><img src="assets/svg/square-light-11852e267c30000bf63ef60def1fef5e.svg" width="25px"></li>
-                    <li><p>Soundslice</p></li>
+                    <li><p>SOUNDSLICE</p></li>
                 </div>
             </ul>
 
@@ -27,7 +27,7 @@
             <ul class="header-first">
                <div class="header-logo">
                     <li><img src="assets/svg/square-light-11852e267c30000bf63ef60def1fef5e.svg" width="25px"></li>
-                    <li><p>Soundslice</p></li>
+                    <li><p>SOUNDSLICE</p></li>
                 </div>
             </ul>
 
