--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="wrapper">
             <ul class="dropdown-menu">
                 <li class="dropdown-item">
-                    <a href="/login/" class="main-nav-item">Inloggen</a>
+                    <a href="https://www.soundslice.com/login/" class="main-nav-item">Inloggen</a>
                 </li>
                 <li>
                     <hr class="divider divider-20">
@@ -95,8 +95,8 @@
             </ul>
 
             <ul class="header-second">
-                <li><a>Log in</a></li>
-                <li><a class="register-but">Sign up</a></li>
+                <li><a href="https://www.soundslice.com/login/">Log in</a></li>
+                <li><a class="register-but" href="https://www.soundslice.com/register/">Sign up</a></li>
             </ul>
         </nav>
     </header>
