border button + more colors

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
             <ul class="header-second">
                 <li><a href="https://www.soundslice.com/login/">Log in</a></li>
-                <li><a class="register-but" href="https://www.soundslice.com/register/">Sign up</a></li>
+                <li><a class="border-btn" href="https://www.soundslice.com/register/">Sign up</a></li>
             </ul>
         </nav>
     </header>
