#9 ff change color

--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
 
             <ul class="header-second">
                 <li>
-                    <button role="button" class="dropdown">
-                        <img src="assets/svg/hamburger.svg" width="25px">
+                    <button role="button" class="dropdown" aria-label="Menu" aria-expanded="false">
+                        <svg width="25" height="25" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                            <path d="M5 17H19M5 12H19M5 7H19" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
                     </button>
                 </li>
             </ul>
