#11 exeeded limit function

--- a/index.html
+++ b/index.html
@@ -100,7 +100,14 @@
                     </li>
                 </div>
             </ul>
-
+            <ul class="header-middle">
+                <li><a href="#">Practice</a></li>
+                <li><a href="#">Teach</a></li>
+                <li><a href="#">Embed</a></li>
+                <li><a href="#">Transcribe</a></li>
+                <li><a href="#">Plans</a></li>
+                <li><a href="#">Help</a></li>
+            </ul>
             <ul class="header-second">
                 <li><a href="https://www.soundslice.com/login/">Log in</a></li>
                 <li><a class="border-btn" href="https://www.soundslice.com/register/">Sign up</a></li>
@@ -125,6 +132,7 @@
 --2-----3-----|---------|---2-----
 --3-----3-----|---------|-3-----3-
 --------------|---------|---------" rows="6" required></textarea>
+                    <p class="counter"></p>
                     <button type="submit" class="convert-button">Convert</button>
                 </fieldset>
 
@@ -142,4 +150,5 @@
     </main>
 </body>
 <script src="scripts/script.js"></script>
+
 </html>
