--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
         <section class="hero">
             <h1 class="hero-title">Convert your ASCII</h1>
-            <p class="hero-text">Soundslice is a platform that converts your ASCII into readable sheet music.</p>
+            <p class="hero-text">Turn ASCII into an interactive learning environment. Perfect for practicing, teaching, sharing, transcribing and more. This is Soundslice's free ASCII converter!</p>
         </section>
 
         <section class="ascii-converter">
