#9 Flex + dropdown fix

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
                 <output class="output-container output-group" style="display: none;">
                     <label>Sheet Music:</label>
-                    <div class="ascii-output output-display"></div>
+                    <textarea class="ascii-output output-display" disabled readonly></textarea>
                 </output>
                 
             </form>
