--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <section class="ascii-converter">
             <form class="converter-container ascii-form">
                 <fieldset class="input-group">
-                    <label for="ascii-input" input="text">ASCII Input:</label>
+                    <label for="input" input="text">ASCII Input:</label>
                     <textarea class="ascii-input" name="ascii-input" placeholder="--0--3--1--0--|---------|---------
 --1-----1-----|-1-0-----|-----1---
 --0-----2-----|-----2-0-|---------
@@ -137,9 +137,12 @@
                     <button type="submit" class="convert-button">Convert</button>
                 </fieldset>
 
-                <output class="output-container output-group" style="display: none;">
-                    <label>Sheet Music:</label>
+                <output class="output-container output-group" >
+                    <label for="output">Result:</label>
                     <textarea class="ascii-output output-display" disabled readonly></textarea>
+                    <label for="name">Your Title:</label>
+                    <input type="text" placeholder="Title..."></input>
+                    <button class="save-button">Save</button>
                 </output>
                 
             </form>
