display none tweak

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <button type="submit" class="convert-button">Convert</button>
                 </fieldset>
 
-                <output class="output-container output-group" >
+                <output class="output-container output-group" style="display: none;">
                     <label for="output">Result:</label>
                     <textarea class="ascii-output output-display" disabled readonly></textarea>
                     <label for="name">Your Title:</label>
