#11 iframe example + webkit styling

--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
 
         <section class="hero">
             <h1 class="hero-title">Convert your ASCII</h1>
-            <p class="hero-text">Turn ASCII into an interactive learning environment. Perfect for practicing, teaching, sharing, transcribing and more. This is Soundslice's free ASCII converter!</p>
+            <p class="hero-text">Turn ASCII into an interactive learning environment. Perfect for practicing, teaching,
+                sharing, transcribing and more. This is Soundslice's free ASCII converter!</p>
         </section>
 
         <section class="ascii-converter">
@@ -139,12 +140,14 @@
 
                 <output class="output-container output-group" style="display: none;">
                     <label for="output">Result:</label>
-                    <textarea class="ascii-output output-display" disabled readonly></textarea>
+                    <textarea class="ascii-output output-display" disabled readonly>
+                    </textarea>
+                    <iframe src="assets/svg/notation-ascii-example.png" for="example"></iframe>
                     <label for="name">Your Title:</label>
                     <input type="text" placeholder="Title..."></input>
                     <button class="save-button">Save</button>
                 </output>
-                
+
             </form>
         </section>
 
