#11 nav changes + links werkend maken

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
                     </li>
 
                     <li class="dropdown-item">
-                        <a href="/features/" class="main-nav-item">The player</a>
+                        <a href="https://www.soundslice.com/features/" class="main-nav-item">The player</a>
                     </li>
                     <li class="dropdown-item">
-                        <a href="/notation-editor/" class="main-nav-item">Notation/tab editor</a>
+                        <a href="https://www.soundslice.com/notation-editor/" class="main-nav-item">Notation/tab editor</a>
                     </li>
                     <li class="dropdown-item">
-                        <a href="/sheet-music-scanner/" class="main-nav-item">
+                        <a href="https://www.soundslice.com/sheet-music-scanner/" class="main-nav-item">
                             Sheet music scanner
                         </a>
                     </li>
@@ -61,31 +61,31 @@
                         <hr class="divider divider-20">
                     </li>
                     <li class="dropdown-item">
-                        <a href="/music-practice/" class="main-nav-item">Practice</a>
+                        <a href="https://www.soundslice.com/music-practice/" class="main-nav-item">Practice</a>
                     </li>
                     <li class="dropdown-item">
-                        <a href="/licensing/" class="main-nav-item">Embedding</a>
+                        <a href="https://www.soundslice.com/licensing/" class="main-nav-item">Embedding</a>
                     </li>
                     <li class="dropdown-item">
-                        <a href="/teachers/" class="main-nav-item">Teaching</a>
+                        <a href="https://www.soundslice.com/teachers/" class="main-nav-item">Teaching</a>
                     </li>
                     <li class="dropdown-item">
-                        <a href="/transcribe/" class="main-nav-item">Transcribing</a>
+                        <a href="https://www.soundslice.com/transcribe/" class="main-nav-item">Transcribing</a>
                     </li>
                     <li class="dropdown-item">
-                        <a href="/plans/" class="main-nav-item">Plans</a>
+                        <a href="https://www.soundslice.com/plans/" class="main-nav-item">Plans</a>
                     </li>
                     <li>
                         <hr class="divider divider-20">
                     </li>
                     <li class="dropdown-item">
-                        <a href="/blog/" class="main-nav-item">Product updates</a>
+                        <a href="https://www.soundslice.com/blog/" class="main-nav-item">Product updates</a>
                     </li>
                     <li class="dropdown-item">
-                        <a href="/help/" class="main-nav-item">Help center</a>
+                        <a href="https://www.soundslice.com/help/" class="main-nav-item">Help center</a>
                     </li>
                     <li class="dropdown-item">
-                        <a href="/about/" class="main-nav-item">Over</a>
+                        <a href="https://www.soundslice.com/about/" class="main-nav-item">Over</a>
                     </li>
                 </ul>
             </div>
@@ -101,12 +101,12 @@
                 </div>
             </ul>
             <ul class="header-middle">
-                <li><a href="#">Practice</a></li>
-                <li><a href="#">Teach</a></li>
-                <li><a href="#">Embed</a></li>
-                <li><a href="#">Transcribe</a></li>
-                <li><a href="#">Plans</a></li>
-                <li><a href="#">Help</a></li>
+                <li><a href="https://www.soundslice.com/music-practice/">Practice</a></li>
+                <li><a href="https://www.soundslice.com/teachers/">Teach</a></li>
+                <li><a href="https://www.soundslice.com/licensing/">Embed</a></li>
+                <li><a href="https://www.soundslice.com/transcribe/">Transcribe</a></li>
+                <li><a href="https://www.soundslice.com/plans/">Plans</a></li>
+                <li><a href="https://www.soundslice.com/help/">Help</a></li>
             </ul>
             <ul class="header-second">
                 <li><a href="https://www.soundslice.com/login/">Log in</a></li>
