--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
         <nav class="main-nav-mobile">
             <ul class="header-first">
                 <div class="header-logo">
-                    <li><img src="assets/svg/square-light-11852e267c30000bf63ef60def1fef5e.svg" width="25px"></li>
+                    <li><img src="assets/svg/square-light-11852e267c30000bf63ef60def1fef5e.svg" width="25px">
+                        <a href="index.html"></a>
+                    </li>
                     <li>
-                        <p>SOUNDSLICE</p>
+                        <p><a href="index.html"></a>SOUNDSLICE</p>
                     </li>
                 </div>
             </ul>
@@ -50,7 +52,8 @@
                         <a href="https://www.soundslice.com/features/" class="main-nav-item">The player</a>
                     </li>
                     <li class="dropdown-item">
-                        <a href="https://www.soundslice.com/notation-editor/" class="main-nav-item">Notation/tab editor</a>
+                        <a href="https://www.soundslice.com/notation-editor/" class="main-nav-item">Notation/tab
+                            editor</a>
                     </li>
                     <li class="dropdown-item">
                         <a href="https://www.soundslice.com/sheet-music-scanner/" class="main-nav-item">
@@ -94,9 +97,11 @@
         <nav class="main-nav-desktop">
             <ul class="header-first">
                 <div class="header-logo">
-                    <li><img src="assets/svg/square-light-11852e267c30000bf63ef60def1fef5e.svg" width="25px"></li>
+                    <li><img src="assets/svg/square-light-11852e267c30000bf63ef60def1fef5e.svg" width="25px">
+                        <a href="index.html"></a>
+                    </li>
                     <li>
-                        <p>SOUNDSLICE</p>
+                        <p><a href="index.html"></a>SOUNDSLICE</p>
                     </li>
                 </div>
             </ul>
