#13 errorMessage in html

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 --0-----2-----|-----2-0-|---------
 --2-----3-----|---------|---2-----
 --3-----3-----|---------|-3-----3-
---------------|---------|---------" rows="6" required></textarea>
+--------------|---------|---------" rows="6" required data-error-msg="Character limit exceeded!"></textarea>
                     <p class="counter"></p>
                     <div class="error-message" style="display: none;"></div>
                     <button type="submit" class="convert-button">Convert</button>
