--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
 
                 <output class="output-container output-group" style="display: none;">
                     <label for="output">Result:</label>
-                    <textarea class="ascii-output output-display" disabled readonly>
+                    <textarea class="ascii-output output-display" name="ascii-output" disabled readonly>
                     </textarea>
                     <iframe src="assets/svg/notation-ascii-example.png" for="example"></iframe>
                     <label for="name">Your Title:</label>
-                    <input type="text" placeholder="Title..."></input>
+                    <input name="title" type="text" placeholder="Title..."></input>
                     <button class="save-button">Save</button>
                 </output>
 
