placeholder fix + footer

--- a/index.html
+++ b/index.html
@@ -157,8 +157,37 @@
         </section>
 
         <footer>
-            <p>&copy; 2025 Soundslice</p>
+            <ul>
+                <li>
+                    <p>Products</p>
+                </li>
+                <li><a href="https://www.soundslice.com/plans/">Plans</a></li>
+                <li><a href="https://www.soundslice.com/teachers/">Teach</a></li>
+                <li><a href="https://www.soundslice.com/store/">Store</a></li>
+                <li><a href="https://www.soundslice.com/notation-tab-editor/">Notation &amp; tab editor</a></li>
+                <li><a href="https://www.soundslice.com/scan-sheet-music/">Scan sheet music</a></li>
+                <li><a href="https://www.soundslice.com/embed-sheet-music/">Embed sheet music</a></li>
+            </ul>
+
+            <ul>
+                <li>
+                    <p>Help</p>
+                </li>
+                <li><a href="https://www.soundslice.com/help/">Help center</a></li>
+                <li><a href="https://www.soundslice.com/contact/">Contact us</a></li>
+            </ul>
+
+            <ul>
+                <li>
+                    <p>Company</p>
+                </li>
+                <li><a href="https://www.soundslice.com/about/">About</a></li>
+                <li><a href="https://www.soundslice.com/product-updates/">Product updates</a></li>
+                <li><a href="https://www.soundslice.com/terms/">Terms</a></li>
+                <li><a href="https://www.soundslice.com/privacy/">Privacy</a></li>
+            </ul>
         </footer>
+        <p5>&copy; 2025 Soundslice</p5>
     </main>
 </body>
 <script src="scripts/script.js"></script>
