#13 small html refactors

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <section class="ascii-converter">
             <form class="converter-container ascii-form">
                 <fieldset class="input-group">
-                    <label for="input" input="text">ASCII Input:</label>
+                    <label>ASCII Input:</label>
                     <textarea class="ascii-input" name="ascii-input" placeholder="--0--3--1--0--|---------|---------
 --1-----1-----|-1-0-----|-----1---
 --0-----2-----|-----2-0-|---------
@@ -144,11 +144,11 @@
                 </fieldset>
 
                 <output class="output-container output-group" style="display: none;">
-                    <label for="output">Result:</label>
+                    <label>Result:</label>
                     <textarea class="ascii-output output-display" name="ascii-output" disabled readonly>
                     </textarea>
                     <iframe src="assets/svg/notation-ascii-example.png" for="example"></iframe>
-                    <label for="name">Your Title:</label>
+                    <label>Your Title:</label>
                     <input name="title" type="text" placeholder="Title..."></input>
                     <button class="save-button">Save</button>
                 </output>
