#13 use hidden instead of display

--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
                     <button type="submit" class="convert-button">Convert</button>
                 </fieldset>
 
-                <output class="output-container output-group" style="display: none;">
+                <output class="output-container output-group" hidden>
                     <label>Result:</label>
-                    <textarea class="ascii-output output-display" name="ascii-output" disabled readonly>
-                    </textarea>
+                    <!-- <textarea class="ascii-output output-display" name="ascii-output" disabled readonly>
+                    </textarea> -->
                     <iframe src="assets/svg/notation-ascii-example.png" for="example"></iframe>
                     <label>Your Title:</label>
                     <input name="title" type="text" placeholder="Title..."></input>
