--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 --3-----3-----|---------|-3-----3-
 --------------|---------|---------" rows="6" required data-error-msg="Character limit exceeded!"></textarea>
                     <p class="counter"></p>
-                    <div class="error-message" style="display: none;"></div>
+                    <div class="error-message" hidden></div>
                     <button type="submit" class="convert-button">Convert</button>
                 </fieldset>
 
