#13 mark + simple function

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <li>
                         <p><a href="index.html"></a>SOUNDSLICE</p>
                     </li>
+                    <li><p class="mark">ASCII</p></li>
                 </div>
             </ul>
 
@@ -103,6 +104,7 @@
                     <li>
                         <p><a href="index.html"></a>SOUNDSLICE</p>
                     </li>
+                    <li><p class="mark">ASCII</p></li>
                 </div>
             </ul>
             <ul class="header-middle">
@@ -150,7 +152,7 @@
                     <iframe src="assets/svg/notation-ascii-example.png" for="example"></iframe>
                     <label>Your Title:</label>
                     <input name="title" type="text" placeholder="Title..."></input>
-                    <button class="save-button">Save</button>
+                    <button class="save-button">Save to account</button>
                 </output>
 
             </form>
