--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     <label>Result:</label>
                     <!-- <textarea class="ascii-output output-display" name="ascii-output" disabled readonly>
                     </textarea> -->
-                    <iframe src="assets/svg/notation-ascii-example.png" for="example"></iframe>
+                    <iframe src="https://www.soundslice.com/slices/CfBbc/embed/" width="100%" height="500" frameBorder="0" allowfullscreen></iframe>
                     <label>Your Title:</label>
                     <input name="title" type="text" placeholder="Title..."></input>
                     <button class="save-button">Save to account</button>
